# opvm2

./: Cargo.toml  README.md  abc.o2  abc.o2c  abc.opvm2  run.sh  test.o2  test.o2c  test.opvm2  test.opvm2.compiled  test.sh
debugger/: Cargo.toml
debugger/src/: lib.rs
examples/: abc.o2  fizzbuzz.o2  test.o2
opvm2/: Cargo.toml
opvm2/src/: heap.rs  instruction.rs  lib.rs  opcode.rs  operand.rs  plugin_interface.rs  register.rs  stack.rs
opvm2/src/lexer/: mod.rs  token.rs
opvm2/src/parser/: mod.rs  program.rs
opvm2_cli/: Cargo.toml
opvm2_cli/src/: main.rs
opvm2_vm/: Cargo.toml
opvm2_vm/src/: heap.rs  lib.rs  machine_context.rs  memory.rs  plugin.rs  store.rs  vm.rs
plugin_test/: Cargo.toml
plugin_test/src/: lib.rs
src/: instruction.rs  lib.rs  opcode.rs  operand.rs  register.rs  stack.rs  vm.rs
src/lexer/: mod.rs  token.rs
src/parser/: program.rs
