[package]
name = "opvm2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { features = ["js"], version = "*" }
extism-pdk = "1.1.0"
nom = "7.1.3"
paste = "1.0.14"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
test-case = "3.3.1"
