[package]
name = "plugin_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.1.0"
opvm2 = { path = "../opvm2" }
serde = { version = "1.0", features = ["derive"] }
